<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">In Touch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_respond">Respond</string>
    <string name="title_activity_setup_details">Choose Contact</string>
    <string name="settings_toolbar">In Touch</string>
    <string name="setup_welcome_text">Welcome to InTouch. As this is your first time running this appplication, you will need to setup a few details.</string>
    <string name="button_add_contact">Choose Significant Other</string>
    <string name="text_intouch_header">IN TOUCH</string>
    <string name="text_contact_details_default">Please Select Your Significant Other from Contacts</string>
    <string name="button_next">Accept</string>
    <string name="title_activity_setup_date">Edit Days and Times</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="button_start_time">Start</string>
    <string name="button_time_finish">Finish</string>
    <string name="text_start_time">Please choose a start time for alerts.</string>
    <string name="text_end_time">Please choose a time after which alerts will be disabled.</string>
    <string name="text_days_to_alert">Please choose the days of the week on which you would like to recieve alerts.</string>
    <string name="action_change_contact">Change Contact</string>
    <string name="action_change_days">Change Days/Times</string>
    <string name="button_powerdown">Hibernate InTouch</string>
    <string name="title_powerdown">The current status of InTouch. Click to stop.</string>
    <string name="action_help">Get Some Help</string>
    <string name="text_hibernate_status_true">InTouch is currently hibernating and is off. Click the CROSS to turn InTouch back on.</string>
    <string name="text_hibernate_status_false">InTouch is currently on. Click the TICK to start hibernating and turn InTouch off.</string>
    <string name="title_activity_help">Help</string>
    <string name="text_toggle_alerts">Toggle randomized contact reminders.</string>

</resources>
