<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_change_contact"
          android:title="@string/action_change_contact"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_person"
          app:showAsAction="always"/>
    <item android:id="@+id/action_change_days"
          android:title="@string/action_change_days"
          android:orderInCategory="200"
          android:icon="@drawable/ic_action_time"
          app:showAsAction="always"/>
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:orderInCategory="300"
          android:icon="@drawable/ic_action_help"
          app:showAsAction="always"/>
</menu>
